# chat

./: .env  docker-compose.yml  pyproject.toml  yoyo.ini
migrations/: 20230509_01_VEtQU-create-client.py
src/: client.py  manage.py  server.py
src/config/: config.json  config.py
src/networking/: message.py  message_socket.py  remote_socket.py  server_socket.py
src/utils/: event_hook.py
