[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["nuri <nurhotun95@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.40"
alembic = "^1.8.1"
yoyo-migrations = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
